Add cursor to the menu button

--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -67,6 +67,7 @@ body,
 	background: transparent;
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
+    cursor: pointer;
 }
 
 .menu-button::before {
