--- a/web/css/main.css
+++ b/web/css/main.css
@@ -119,15 +119,30 @@ body {
     padding: 10px 20px;
     text-decoration: none;
     text-align: center ;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.4);
+    transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out, color 0.2s ease-out;
+}
+.button:hover {
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
 }
 
 .button.warning {
-    color: #04C;
+    color: #48C;
+}
+.button.warning:hover {
+    background-color: #E0E0E0;
+    color: #26A;
 }
 
 .button.success {
     color: #EFEFEF;
     background-color: #48C;
+}
+.button.success:hover {
+    background-color: #26A;
 }
 
 .form {
