Set community logo as tab icon

--- a/app/Resources/views/base.mobile.html.twig
+++ b/app/Resources/views/base.mobile.html.twig
@@ -9,7 +9,7 @@
             <link rel="stylesheet" type="text/css" href="{{ asset('css/main_mobile.css') }}" />
 
         {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('images/black_logo.png') }}" />
 
          {% block javascripts %}
            <script type="text/javascript" src="{{ asset('js/mobile.js') }}"></script>
