--- a/app/Resources/views/base.regular.html.twig
+++ b/app/Resources/views/base.regular.html.twig
@@ -10,7 +10,7 @@
             <link rel="stylesheet" type="text/css" href="{{ asset('css/main.css') }}" />
             <link rel="stylesheet" type="text/css" href="{{ asset('css/menu.css') }}" />
         {% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('images/black_logo.png') }}" />
     </head>
     <body>
 
