--- a/app/Resources/views/base.mobile.html.twig
+++ b/app/Resources/views/base.mobile.html.twig
@@ -12,6 +12,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('images/black_logo.png') }}" />
 
          {% block javascripts %}
+            <script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
            <script type="text/javascript" src="{{ asset('js/mobile.js') }}"></script>
         {% endblock %}
     </head>
