--- a/app/Resources/views/base.regular.html.twig
+++ b/app/Resources/views/base.regular.html.twig
@@ -90,6 +90,7 @@
             </footer>
         </div>
         {% block javascripts %}
+            <script type="text/javascript" src="{{ asset('js/main.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/menu.js') }}"></script>
             <script type="text/javascript" src="{{ asset('js/notifications.js') }}"></script>
         {% endblock %}
