--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -26,7 +26,7 @@ body,
 	-webkit-overflow-scrolling: touch;
 	-webkit-transition: -webkit-transform 0.3s;
 	transition: transform 0.3s;
-    background-color: #606090;
+    background-color: #010F2A;
 }
 
 .content {
