--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Electrolize');
 
 html {
-    color: #EFEFEF;
+    color: #B4C5CC;
     font-family: 'Electrolize', sans-serif;
-    background-color: #606090;
+    background-color: #010F2A;
 }
 
 body {
@@ -114,32 +114,26 @@ body {
 
 .button {
     display: inline-block;
-    background-color: #EFEFEF;
-    color: #222;
+    color: #E1BB81;
+    font-variant: small-caps;
+    font-weight: bold;
     padding: 10px 20px;
     text-decoration: none;
     text-align: center ;
-    border: none;
-    border-radius: 5px;
+    border: 2px solid #E1BB81;
     cursor: pointer;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.4);
-    transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out, color 0.2s ease-out;
+    background: none;
+    transition: color 0.2s ease-out, border 0.2s ease-out;
 }
 .button:hover {
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.8);
-}
-
-.button.warning {
-    color: #48C;
-}
-.button.warning:hover {
-    background-color: #E0E0E0;
-    color: #26A;
+    color: #D0A060;
+    border: 2px solid #D0A060;
 }
 
 .button.success {
-    color: #EFEFEF;
-    background-color: #48C;
+    border: 2px solid #CFD6D8;
+    color: #CFD6D8;
+    background-color: #003C71;
 }
 .button.success:hover {
     background-color: #26A;
