--- a/app/Resources/views/project/new_feedback.html.twig
+++ b/app/Resources/views/project/new_feedback.html.twig
@@ -6,22 +6,30 @@
     <link rel="stylesheet" type="text/css" href="{{ asset('css/project.css') }}" />
 {% endblock %}
 
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdn.ckeditor.com/ckeditor5/10.0.1/classic/ckeditor.js"></script>
+    <script type="text/javascript">
+        ClassicEditor
+            .create(document.querySelector('#editor'))
+            .then(editor => {
+                document.querySelector('#feedback-form').onsubmit = event => {
+                    document.querySelector('#description').value = editor.getData();
+                };
+            })
+            .catch(error => console.log(error));
+    </script>
+{% endblock %}
+
 {% block page_title %}{{ (type == 'evolution' ? 'project.feedback.propose_evolution' : 'project.feedback.report_bug') | trans }}{% endblock %}
 
 {% block body %}
-    <div id="feedback-form" class="form">
-        <form method="post" action="{{ path('create_feedback') }}">
-            <div class="form-group">
-                <label for="title">{{ 'project.feedback.title' | trans }}</label>
-                <input type="text" name="title" />
-            </div>
-            <div class="form-group">
-                <label for="description">{{ 'project.feedback.description' | trans }}</label>
-                <textarea name="description"></textarea>
-            </div>
-            <input type="hidden" name="type" value="{{ type }}"/>
-            <button type="submit">{{ 'project.feedback.create' | trans }}</button>
-        </form>
-    </div>
+    <form id="feedback-form" method="post" action="{{ path('create_feedback') }}">
+        <input id="title" type="text" name="title" placeholder="{{ 'project.feedback.title' | trans }}"/>
+        <div id="editor" class="cke-editor"></div>
+        <input type="hidden" name="type" value="{{ type }}"/>
+        <input type="hidden" name="description" id="description" value="" />
+        <button class="button" type="submit">{{ 'project.feedback.create' | trans }}</button>
+    </form>
 {% endblock %}
 
