--- a/web/css/project.css
+++ b/web/css/project.css
@@ -155,6 +155,10 @@
     background: rgba(0,0,0,0.6);
 }
 
+#feedback > section > .feedback-content > .description > .ck-editor {
+    color: #E1BB81;
+}
+
 #feedback > section > .feedback-content > .description > .description-content {
     padding: 20px 2px;
     margin-left: 5px;
@@ -210,14 +214,7 @@
     margin: auto;
 }
 
-#new-comment textarea {
-    display:block;
-    width: 100%;
-    height:150px;
-    resize: none;
-}
-
-#new-comment button {
+#new-comment > button {
     display: block;
     margin: auto;
     margin-top: 15px;
@@ -225,6 +222,14 @@
     color: #EFEFEF;
     padding: 10px 15px;
     cursor: pointer;
+}
+
+#new-comment > .ck-editor {
+    color: #E1BB81;
+}
+
+#new-comment .ck-editor__editable {
+    min-height: 250px;
 }
 
 #project-description {
